# plugsight

./: .editorconfig  .gitignore  .prettierrc.yaml  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.ts  collect-artifacts.ts  regenerate-icons.py
src/: App.tsx  app.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: updater.key.pub
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/device/: class_icons.rs  class_meta.rs  enumerator.rs  mod.rs  properties.rs  types.rs  watcher.rs
src/components/: DeviceCategory.tsx  DeviceDetail.tsx  DeviceEntry.tsx  DeviceIcon.tsx  DeviceTree.tsx  StatusBadge.tsx  StatusBar.tsx  Toolbar.tsx
src/lib/: device-store.ts  icon-cache.ts  icons.ts  tauri.ts  types.ts  updater.ts
src/styles/: animations.css
