[package]
name = "device-manager-pp"
version = "0.1.0"
edition = "2024"

[lib]
name = "device_manager_pp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
png = "0.17"
base64 = "0.22"

[dependencies.windows]
version = "0.58"
features = [
  "Devices_Enumeration",
  "Foundation",
  "Foundation_Collections",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
